# xgg-mprpc

./: CMakeLists.txt  README.md
example/: build.sh  friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cpp  userservice.cpp
example/caller/: CMakeLists.txt  callfriendservice.cpp  calluserservice.cpp
src/: CMakeLists.txt  config.cpp  logger.cpp  mprpcapplication.cpp  rpcchannel.cpp  rpccontroller.cpp  rpcprovider.cpp  zookeeperutil.cpp
src/include/: config.h  lockqueue.h  logger.h  mprpcapplication.h  rpcchannel.h  rpccontroller.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: a.out  main.cpp  test.pb.cc  test.pb.h  test.proto
